# franka_push_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: moveit.rviz
launch/: bringup.launch  moveit_rviz.launch
meshes/: circle0.fcstd  circle0.stl  hexagon0.fcstd  hexagon0.stl  quadrangle0.fcstd  quadrangle0.stl  quadrangle1.fcstd  quadrangle2.fcstd  quadrangle2.stl  quadrangle3.fcstd  quadrangle3.stl  triangle0.fcstd  triangle0.stl  triangle1.fcstd  triangle1.stl  triangle2.fcstd  triangle2.stl  triangle3.fcstd  triangle3.stl  triangle4.fcstd  triangle4.stl  triangle5.fcstd  triangle5.stl
models/: circle0.fcstd  hoge.dae  hoge.stl  quadrangle0.fcstd  quadrangle0.stl  quadrangle1.fcstd  quadrangle1.stl  quadrangle2.fcstd  quadrangle2.stl  quadrangle3.stl  square.fcstd  square.fcstd1  square.stl  triangle0.fcstd  triangle0.fcstd1  triangle0.stl  triangle1.fcstd  triangle1.fcstd1  triangle1.stl  triangle2.stl
models/obsolete/: hoge2.dae  quadrangle0.dae  quadrangle0.fcstd1  triangle0.fcstd1  triangle1.fcstd1
scripts/: collect_dataset.py  gazebo_interface.py  generate_worlds.py  random_pose.py
scripts/franka_push_gazebo/: gazebo_interface.py
src/: add_ground_object.cpp  add_objects.cpp  object_params_updater.cpp
worlds/: adaptive_push.world  env.world  object.urdf  objects.world  plane.urdf  test.world
worlds/obsolete/: object.urdf
worlds/quadrangle0/: quadrangle0_-0.02_-0.06 .world  quadrangle0_-0.02_0.0 .world  quadrangle0_-0.02_0.06 .world  quadrangle0_0.02_-0.06 .world  quadrangle0_0.02_0.0 .world  quadrangle0_0.02_0.06 .world
worlds/quadrangle1/: quadrangle1_-0.02_-0.12 .world  quadrangle1_-0.02_0.0 .world  quadrangle1_-0.02_0.12 .world  quadrangle1_0.02_-0.12 .world  quadrangle1_0.02_0.0 .world  quadrangle1_0.02_0.12 .world
worlds/templates/: po.world  quadrangle0.world  quadrangle1.world  test.py
