<?xml version="1.0"?>
<package format="2">
  <name>franka_push_gazebo</name>
  <version>0.0.0</version>
  <description>The franka_push_gazebo package</description>

  <maintainer email="takayuki5168@gmail.com">Takayuki Murooka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
    <gazebo_ros plugin_path="${prefix}/../../devel/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
