<?xml version="1.0"?>
<package format="2">
  <name>franka_push_gazebo</name>
  <version>0.0.0</version>
  <description>The franka_push_gazebo package</description>

  <maintainer email="takayuki5168@gmail.com">Takayuki Murooka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>panda_moveit_config</exec_depend>

  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>gazebo_ros</build_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
    <gazebo_ros plugin_path="${prefix}/../../devel/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
